2005-04-11  Ross Johnson  <rpj@callisto.canberra.edu.au>

        * once4.c: New test; tries to test priority adjustments.

2005-04-06  Ross Johnson  <rpj@callisto.canberra.edu.au>

	* cleanup0.c: Fix unguarded global variable accesses.
	* cleanup1.c: Likewise.
	* cleanup2.c: Likewise.
	* cleanup3.c: Likewise.
	* once2.c: Likewise.
	* once3.c: Likewise.

2005-04-01  Ross Johnson  <rpj@callisto.canberra.edu.au>

	* GNUmakefile: Add target to test linking static link library.
	* Makefile: Likewise.
	* self1.c: Run process attach/detach routines when static linked.

2005-03-16  Ross Johnson  <rpj@callisto.canberra.edu.au>

	* mutex5.c: Prevent optimiser from removing asserts.

2005-03-12  Ross Johnson  <rpj@callisto.canberra.edu.au>

	* once3.c: New test.

2005-03-08  Ross Johnson  <rpj@callisto.canberra.edu.au>

        * once2.c: New test.

2004-11-19  Ross Johnson  <rpj@callisto.canberra.edu.au>

	* Bmakefile: New makefile for Borland.
	* Makefile (DLL_VER): Added.
	* GNUmakefile (DLL_VER): Added.
	* Wmakefile (DLL_VER): Added.

2004-10-29  Ross Johnson  <rpj@callisto.canberra.edu.au>

	* semaphore4.c: New test.
	* semaphore4t.c: New test.
	* Debug.dsp (et al): Created MSVC Workspace project to aid debugging.
	* All: Many tests have been modified to work with the new pthread
	ID type; some other corrections were made after some library
	functions were semantically strengthened. For example,
	pthread_cond_destroy() no longer destroys a busy CV, which
	required minor redesigns of some tests, including some where
	the mutex associated with the CV was not locked during
	signaling and broadcasting.

2004-10-23  Ross Johnson  <rpj@callisto.canberra.edu.au>

	* condvar3.c: Fixed mutex operations that were incorrectly
	placed in relation to their condition variable operations.
	The error became evident after sem_destroy() was rewritten
	and conditions for destroing the semaphore were tightened.
	As a result, pthread_cond_destroy() was not able to